add style to a tag

--- a/app/assets/stylesheets/reset.css
+++ b/app/assets/stylesheets/reset.css
@@ -27,3 +27,10 @@ body {
 ul {
   list-style: none;
 }
+
+a {
+	background: white;
+	border-radius: 50%;
+	color: black;
+	text-decoration-style: none;
+}
