--- a/app/assets/stylesheets/splashpage.css
+++ b/app/assets/stylesheets/splashpage.css
@@ -11,17 +11,76 @@
 }
 
 .search-outer-container{
-  width: 100%;
+  width: 600px;
   display: flex;
   justify-content: center;
 }
 
 .search-inner-container{
-  background-color: pink;
+  /*background-color: pink;*/
   width: 600px;
   align-self: center;
 }
 
-.input{
+.splash-search-input{
+  width: 100%;
+  height: 20px;
+  padding: 5px;
+  border-radius: 5px;
+}
 
+.splash-input-container{
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+.splash-input-city{
+  height: 10px;
+  padding: 5px;
+  border-radius: 5px;
+}
+
+.splash-input-zipcode{
+  margin: 0 10px;
+  height: 10px;
+  padding: 5px;
+  border-radius: 5px;
+}
+
+.splash-input-radius{
+  height: 25px;
+  padding: 5px;
+  border-radius: 5px;
+}
+
+.splash-date-picker-container{
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+.splash-date-picker{
+  background-color: white;
+  height: 50px;
+  border: black solid 1px;;
+  border-radius: 5px;
+  padding: 0px 15px;
+  margin: 0px 5px;
+}
+
+.splash-input-submit-container{
+  text-align: center;
+  margin-top: 20px;
+}
+
+.splash-input-submit{
+  /*background-color: #8cf291;*/
+  background-color: Transparent;
+  color: white;
+  border: 5px solid white;
+  border: none;
+  height: 30px;
+  width: 100px;
+  border-radius: 5px;
 }
