--- a/app/assets/stylesheets/splashpage.css
+++ b/app/assets/stylesheets/splashpage.css
@@ -10,21 +10,36 @@
   min-width: 500px;
 }
 
-.search-outer-container{
-  width: 600px;
+.splash-search-outer-container{
+  /*background: yellow;*/
+  width: 700px;
   display: flex;
   justify-content: center;
 }
 
-.search-inner-container{
-  /*background-color: pink;*/
-  width: 600px;
+.splash-search-inner-container{
+  background: rgba(0,0,0,0.6);
+  width: 700px;
+  height: 250px;
   align-self: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.splash-search-form{
+  height: 225px;
+}
+
+.splash-search-input-container{
 }
 
 .splash-search-input{
-  width: 100%;
-  height: 20px;
+  /*background: white;*/
+  background: rgba(250,250,250,0.9);
+  border: black solid 1px;
+  width: 600px;
+  height: 40px;
   padding: 5px;
   border-radius: 5px;
 }
@@ -36,20 +51,27 @@
 }
 
 .splash-input-city{
-  height: 10px;
+  background: rgba(250,250,250,0.9);
+  border: black solid 1px;
+  height: 30px;
   padding: 5px;
   border-radius: 5px;
 }
 
 .splash-input-zipcode{
+  /*background: white;*/
+  background: rgba(250,250,250,0.9);
+  border: black solid 1px;
   margin: 0 10px;
-  height: 10px;
+  height: 30px;
   padding: 5px;
   border-radius: 5px;
 }
 
 .splash-input-radius{
-  height: 25px;
+  height: 42px;
+  opacity: 0.9;
+  width: 100px;
   padding: 5px;
   border-radius: 5px;
 }
@@ -61,7 +83,8 @@
 }
 
 .splash-date-picker{
-  background-color: white;
+  /*background-color: white;*/
+  background: rgba(250,250,250,0.9);
   height: 50px;
   border: black solid 1px;;
   border-radius: 5px;
@@ -75,11 +98,10 @@
 }
 
 .splash-input-submit{
-  /*background-color: #8cf291;*/
+  cursor: pointer;
   background-color: Transparent;
   color: white;
-  border: 5px solid white;
-  border: none;
+  border: 1px solid white;
   height: 30px;
   width: 100px;
   border-radius: 5px;
