--- a/app/assets/stylesheets/splashpage.css
+++ b/app/assets/stylesheets/splashpage.css
@@ -15,6 +15,8 @@
   width: 700px;
   display: flex;
   justify-content: center;
+  flex-direction: column;
+
 }
 
 .splash-search-inner-container{
@@ -25,6 +27,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  padding-top: 10px;
 }
 
 .splash-search-form{
@@ -109,4 +112,22 @@
 
 .splash-input-submit:hover {
   background: rgb(43, 42, 42);
+}
+
+.splash-logo {
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  color: white;
+  margin-bottom: 40px;
+}
+
+.splash-logo h1 {
+  font-size: 200px;
+  align-self: center;
+}
+
+.splash-logo h4 {
+  font-size: 50px;
+  margin-top: -40px;
 }
