--- a/app/assets/stylesheets/splashpage.css
+++ b/app/assets/stylesheets/splashpage.css
@@ -120,14 +120,15 @@
   align-self: center;
   color: white;
   margin-bottom: 40px;
+  font-family: 'Oswald', sans-serif;
 }
 
 .splash-logo h1 {
-  font-size: 200px;
+  font-size: 210px;
   align-self: center;
 }
 
 .splash-logo h4 {
-  font-size: 50px;
-  margin-top: -40px;
+  font-size: 60px;
+  margin-top: -60px;
 }
