--- a/app/assets/stylesheets/splashpage.css
+++ b/app/assets/stylesheets/splashpage.css
@@ -5,18 +5,44 @@
   background-size: cover;
   display: flex;
   justify-content: center;
-
   min-height: 500px;
   min-width: 500px;
 }
 
-.splash-search-outer-container{
-  /*background: yellow;*/
-  width: 700px;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
+.splash-inner-container{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
 
+.splash-logo {
+  display: flex;
+  height: 300px;
+  flex-direction: column;
+  align-self: center;
+  color: white;
+  margin-bottom: 40px;
+  font-family: 'Oswald', sans-serif;
+}
+
+.splash-logo h1 {
+  font-size: 210px;
+  align-self: center;
+  line-height: 210px;
+}
+
+.splash-logo h4 {
+  font-size: 60px;
+  margin-top: -60px;
+  line-height: 160px;
+}
+
+.splash-search-outer-container{
+  width: 700px;
+  height: 500px;
+  display: flex;
+  /*justify-content: center;
+  flex-direction: column;*/
 }
 
 .splash-search-inner-container{
@@ -27,6 +53,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 10px;
   padding-top: 10px;
 }
 
@@ -112,23 +139,4 @@
 
 .splash-input-submit:hover {
   background: rgb(43, 42, 42);
-}
-
-.splash-logo {
-  display: flex;
-  flex-direction: column;
-  align-self: center;
-  color: white;
-  margin-bottom: 40px;
-  font-family: 'Oswald', sans-serif;
-}
-
-.splash-logo h1 {
-  font-size: 210px;
-  align-self: center;
-}
-
-.splash-logo h4 {
-  font-size: 60px;
-  margin-top: -60px;
 }
