--- a/app/assets/stylesheets/index_styles.css
+++ b/app/assets/stylesheets/index_styles.css
@@ -1,9 +1,10 @@
 .events-index {
-	background: white;
+	background: linear-gradient(to bottom right, darkorange, orange);
 	max-height: 100vh;
 	overflow-y: scroll;
 	margin: 20px;
-	max-width: 50%;
+	min-width: 40%;
+	border: 1px solid black;
 }
 
 .events-item {
@@ -11,6 +12,8 @@
 	margin: 10px;
 	border: 1px solid grey;
 	padding: 10px;
+	border-radius: 10px;
+	
 }
 
 .events-left {
@@ -18,8 +21,11 @@
 	color: #7C7575;
 }
 
+.events-center {
+	width: 400px;
+}
 .events-right {
-	align-items: flex-end;
+	align-self: center;
 }
 
 .search-index {
@@ -36,3 +42,4 @@
 	border-bottom: 1px solid black;
 	margin: 5px;
 }
+
