--- a/app/assets/stylesheets/index_styles.css
+++ b/app/assets/stylesheets/index_styles.css
@@ -1,3 +1,8 @@
+.eventbrite-logo {
+	width: 250px;
+	align-self: center;
+}
+
 .events-index {
 	background: linear-gradient(to bottom right, darkorange, orange);
 	max-height: 100vh;
